# LiteraryCharacterGenerator

./: .replit  CHANGELOG.md  CNAME  GITHUB_PAGES_SETUP.md  LICENSE  MANIFEST.in  README.md  README_PUBLICATION.md  demo_complete_setup.py  demo_library_functionality.py  pyproject.toml  setup.py  test_basic_functionality.py  test_library_structure.py  test_lightweight_demo.py
.github/workflows/: deploy-docs.yml  publish-pypi.yml  test.yml
docs/: API_REFERENCE.md  EXAMPLES.md  QUICK_START.md  README.md
docs-site/: next.config.js  package-lock.json  package.json
docs-site/.next/cache/: config.json
docs-site/pages/: _document.js  api.js  examples.js  index.js  tutorial.js
docs-site/styles/: globals.css
examples/: async_usage.py  basic_usage.py  custom_parameters.py
multiverse_character_generator/: __init__.py  cli.py  exceptions.py  generator.py  models.py  universes.py  utils.py
multiverse_character_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_generator.py  test_universes.py
