[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiverse-character-generator"
version = "1.0.0"
description = "Generate fictional characters across multiple universes using GPT-2"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Multiverse Character Generator Team", email = "contact@example.com"}
]
maintainers = [
    {name = "Multiverse Character Generator Team", email = "contact@example.com"}
]
keywords = [
    "character-generation",
    "gpt2", 
    "fiction",
    "fantasy",
    "sci-fi",
    "horror",
    "cyberpunk",
    "anime",
    "marvel",
    "nlp",
    "machine-learning"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "pydantic>=1.8.0",
    "nltk>=3.6",
    "numpy>=1.21.0",
    "tokenizers>=0.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950"
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0"
]
web = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "flask>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/your-username/multiverse-character-generator"
Documentation = "https://your-username.github.io/multiverse-character-generator"
Repository = "https://github.com/your-username/multiverse-character-generator.git"
Issues = "https://github.com/your-username/multiverse-character-generator/issues"
Changelog = "https://github.com/your-username/multiverse-character-generator/blob/main/CHANGELOG.md"

[project.scripts]
multiverse-gen = "multiverse_character_generator.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["multiverse_character_generator*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
multiverse_character_generator = ["*.txt", "*.json", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["multiverse_character_generator"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "nltk.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py"
]
python_classes = [
    "Test*"
]
python_functions = [
    "test_*"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
asyncio_mode = "auto"